test/tests/compiler/18_structures/invalid_types/incompatible_types/branch_mismatch_2.plx
type struc s(    a: i32    )

pub fn main(none) i32 {
    x: struc s = $(true)
    ?     #  can't have conditional branches where only one branch is a struct
    1 then x else cast<none>(2)
}
